# arcanum-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.sandbox  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
arcanum/: __main__.py
arcanum/agent/: engine.py  llm.py  orchestrator.py  session.py  skills.py  tools.py
arcanum/api/: main.py  websocket.py
arcanum/api/routes/: cve.py  findings.py  reports.py  sessions.py  stash.py  tools.py
arcanum/cli/: app.py  commands.py
arcanum/cli/modes/: autopilot.py  copilot.py  manual.py
arcanum/core/: alerts.py  config.py  cve_kb.py  database.py  demo_data.py  i18n.py  models.py  reports.py  stash.py  workflows.py
arcanum/sandbox/: browser.py  docker.py
arcanum/tools/: base.py  registry.json
docker/: Dockerfile  Dockerfile.app  Dockerfile.demo  docker-compose.demo.yml  docker-compose.yml
frontend/: index.html
tests/test_agent/: test_tools.py
tests/test_core/: test_database.py  test_models.py
